# thermo

./: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  UNITS.md
examples/: combustion_example.cpp  heat_transfer_measurement.py  humidair_example.cpp  thermo_example.cpp
include/: combustion.h  common_names.h  compressible.h  humidair.h  math_constants.h  thermo.h  thermo_transport.h  thermo_transport_data.h  transport.h  units.h  units_data.h  utils.h
python/: README.md
python/combaero/: __init__.py  _core.cpp
python/examples/: combustion_example.py  compressible_flow_example.py  de_laval_nozzle.py
python/tests/: test_common_names.py  test_compressible.py  test_equivalence_ratio.py  test_transport.py
scripts/: check-source-style.sh  generate_units_md.py  run-clang-tidy.sh
src/: combustion.cpp  compressible.cpp  main.cpp  thermo.cpp  thermo_transport.cpp  transport.cpp  utils.cpp
tests/: test_fraction_functions.cpp  test_humidair.cpp  test_ice_equation_accuracy.cpp  test_thermo_transport.cpp  test_units.cpp  test_water_equation_accuracy.cpp
thermo_data_generator/: README.md  create_cpp_header.py  generate_thermo_data.py  test_create_cpp_header.py
